Removed all Errors / Warnings / Notes found by R CMD check. Still Issues to adress when running as cran

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,8 @@
-exportPattern("^[[:alpha:]]+")
+export(train.gsom)
+export(train_xy.gsom)
+export(map.gsom)
+export(predict.gsom)
+export(plot.gsom)
+export(print.gsom)
+export(summary.gsom)
 useDynLib(GrowingSOM)
